--- a/styles/main.css
+++ b/styles/main.css
@@ -3,7 +3,7 @@
 body {
     font-size: 16px;
     color:white;
-    background: #786e7d;
+    background: #e820b6;
     line-height: 1.43;
     font-family: Trebuchet MS, sans-serif;
     text-align: center;
@@ -16,7 +16,7 @@ body {
   padding-right: 30px;
   padding-bottom: 10px;
   padding-left: 30px;
-  background: #7a00b3;
+  background: #ed85d7;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   /*text*/
   text-align: center;
@@ -30,7 +30,7 @@ body {
   padding-right: 30px;
   padding-bottom: 5px;
   padding-left: 30px;
-  background: #7a00b3;
+  background: #ed85d7;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   /*text*/
   text-align: center;
